# mono-hash

./: CHANGELOG.md  LICENSE  mono-hash.cabal
.github/workflows/: haskell-ci.yml
bench/: Main.hs
src/Data/Hash/Mono/: FNV.hs  HalfSipHash.hs  Internal.hs  SipHash.hs
test/: Main.hs
test/FNV/: TestData.hs
test/SipHash/: TestData.hs
test/Test/Data/: FNV.hs  HalfSipHash.hs  SipHash.hs
