cabal-version: 3.0
name: mono-hash
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Philipp Hagenlocher
maintainer: me@philipphagenlocher.de
category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings

  exposed-modules:
    Data.Hash.Mono.FNV
    Data.Hash.Mono.SipHash
  
  other-modules:
    Data.Hash.Mono.Internal
  
  build-depends:
    base ^>=4.17.2.1,
    containers,
    mono-traversable,
    strict-identity,
    wide-word,

  hs-source-dirs: src

  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    FlexibleContexts
    ImportQualifiedPost
    InstanceSigs
    ScopedTypeVariables

test-suite mono-hash-test
  import: warnings

  default-language: Haskell2010

  other-modules: 
    FNV.TestData
    SipHash.TestData

  type: exitcode-stdio-1.0

  hs-source-dirs: test

  main-is: Main.hs

  build-depends:
    base ^>=4.17.2.1,
    bytestring,
    mono-hash,
    tasty,
    tasty-hunit,
    text,
    wide-word,

benchmark mono-hash-bench
  type: exitcode-stdio-1.0

  hs-source-dirs: bench

  default-language: Haskell2010

  main-is: Main.hs

  build-depends:
    base >=4 && <5,
    criterion,
    deepseq,
    mono-hash,
    wide-word,
